don't use deprecated constructor of Integer/Long